# Computer-Graphics-GTU

./: README.md
examples/create_first_image/: main.cc  script.sh
examples/glfw/: Readme.md  glad.c
examples/hw1/: Makefile  main.cpp  scene.xml
examples/ray_class/: Makefile  image.ppm  main  main.cc  ray.h  script.sh
examples/vec3_class/: vec3.h
hw1/: CMakeLists.txt  Makefile  README.md  scene1.xml
hw1/raytracer/: axisaligbounbox.h  camera.h  helpers.h  hittable.h  image.h  main.cpp  mesh.h  ray.h  scene.h  vec3.h  xml.h
hw1/raytracer/src/: aabb.cpp  aabb.h  camera.h  hittable.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  ray.h  scene.cpp  scene.h  vec3.h  xml.cpp
hw1/scenes/: scene2.xml  scene3.xml
hw2/: BUILD.md  Makefile  Mat4.h  README.md  Vec3.h  camera.h  glad.h  main  mesh.h  model.h  test  test.cpp
hw2/fs/: camera.fs
hw2/shaders/: shader_m.h
hw2/vs/: camera.vs
